--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="assets/gear.png" />
     <link rel="mask-icon" type="image/x-icon" href="assets/gear.svg" color="#111" />
 
-  <title>Maintenance page</title>
+  <title>Saad Hammouch</title>
   
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
   
